force-app/main/default/src/objects/HealthCloudGA__RiskScoreHCCCode__mdt/HealthCloudGA__RiskScoreHCCCode__mdt.object-meta.xml
<CustomObject>
    <description>Lookup table with information about HCC Codes and Scores</description>
    <label>Risk Score HCCCode</label>
    <pluralLabel>Risk Score HCCCode</pluralLabel>
</CustomObject>