force-app/main/default/src/objects/HealthCloudGA__RiskScoreHCCCode__mdt/fields/HealthCloudGA__ConditionCategory__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ConditionCategory__c</fullName>
    <label>Condition Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>