force-app/main/default/src/objects/HealthCloudGA__RiskScoreHCCCode__mdt/fields/HealthCloudGA__Description__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>