force-app/main/default/src/objects/HealthCloudGA__RiskScoreHCCCode__mdt/fields/HealthCloudGA__HCCCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HCCCode__c</fullName>
    <label>HCCCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>