force-app/main/default/src/objects/HealthCloudGA__RiskScoreHCCCode__mdt/fields/HealthCloudGA__Institutional__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Institutional__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Institutional</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>