force-app/main/default/src/objects/HealthCloudGA__RiskScoreHCCCode__mdt/fields/HealthCloudGA__OverriddenHCCCodes__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OverriddenHCCCodes__c</fullName>
    <label>Overridden HCC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>